--- a/embedding/Makefile
+++ b/embedding/Makefile
@@ -59,17 +59,19 @@ $(BDIR)/%  : $(ODIR)/%.o
 ###############################################################################
 ############################# Main Targets ####################################
 ###############################################################################
-all : $(BDIR)/sim $(BDIR)/ptResponse_diff $(BDIR)/ptResponse_diff_OLD
+all : $(BDIR)/sim $(BDIR)/ptResponse_diff $(BDIR)/ptResponse_diff_OLD  $(BDIR)/ptResponse
 
 $(ODIR)/funcs.o : $(SDIR)/funcs.cxx $(SDIR)/funcs.hh $(SDIR)/params.hh
 $(ODIR)/sim.o : $(SDIR)/sim.cxx $(SDIR)/params.hh
 $(ODIR)/ptResponse_diff_OLD.o : $(SDIR)/ptResponse_diff_OLD.cxx $(SDIR)/params.hh
 $(ODIR)/ptResponse_diff.o : $(SDIR)/ptResponse_diff.cxx $(SDIR)/params.hh
+$(ODIR)/ptResponse.o : $(SDIR)/ptResponse.cxx $(SDIR)/params.hh
 
 #data analysis
 $(BDIR)/sim :	$(ODIR)/sim.o	$(ODIR)/funcs.o
-$(BDIR)/ptResponse_diff :	$(ODIR)/ptResponse_diff.o	$(ODIR)/funcs.o
 $(BDIR)/ptResponse_diff_OLD :       $(ODIR)/ptResponse_diff_OLD.o       $(ODIR)/funcs.o
+$(BDIR)/ptResponse_diff :	$(ODIR)/ptResponse_diff.o	$(ODIR)/funcs.o
+$(BDIR)/ptResponse :	$(ODIR)/ptResponse.o	$(ODIR)/funcs.o
 
 
 ###############################################################################
