--- a/embedding/Makefile
+++ b/embedding/Makefile
@@ -59,7 +59,7 @@ $(BDIR)/%  : $(ODIR)/%.o
 ###############################################################################
 ############################# Main Targets ####################################
 ###############################################################################
-all : $(BDIR)/sim $(BDIR)/ptResponse_diff $(BDIR)/ptResponse_diff_OLD  $(BDIR)/ptResponse $(BDIR)/ptDifferentialUE
+all : $(BDIR)/sim $(BDIR)/ptResponse_diff $(BDIR)/ptResponse_diff_OLD  $(BDIR)/ptResponse $(BDIR)/ptDifferentialUE $(BDIR)/JEScorrection
 
 $(ODIR)/funcs.o : $(SDIR)/funcs.cxx $(SDIR)/funcs.hh $(SDIR)/params.hh
 $(ODIR)/UEfuncs.o : $(SDIR)/UEfuncs.cxx $(SDIR)/UEfuncs.hh $(SDIR)/params.hh
@@ -68,6 +68,7 @@ $(ODIR)/ptResponse_diff_OLD.o : $(SDIR)/ptResponse_diff_OLD.cxx $(SDIR)/params.h
 $(ODIR)/ptResponse_diff.o : $(SDIR)/ptResponse_diff.cxx $(SDIR)/params.hh
 $(ODIR)/ptResponse.o : $(SDIR)/ptResponse.cxx $(SDIR)/params.hh
 $(ODIR)/ptDifferentialUE.o : $(SDIR)/ptDifferentialUE.cxx $(SDIR)/params.hh
+$(ODIR)/JEScorrection.o : $(SDIR)/JEScorrection.cxx $(SDIR)/params.hh
 
 #data analysis
 $(BDIR)/sim :	$(ODIR)/sim.o	$(ODIR)/funcs.o
@@ -75,6 +76,7 @@ $(BDIR)/ptResponse_diff_OLD :       $(ODIR)/ptResponse_diff_OLD.o       $(ODIR)/
 $(BDIR)/ptResponse_diff :	$(ODIR)/ptResponse_diff.o	$(ODIR)/funcs.o
 $(BDIR)/ptResponse :	$(ODIR)/ptResponse.o	$(ODIR)/funcs.o
 $(BDIR)/ptDifferentialUE :	$(ODIR)/ptDifferentialUE.o	$(ODIR)/UEfuncs.o
+$(BDIR)/JEScorrection :	$(ODIR)/JEScorrection.o	$(ODIR)/funcs.o
 
 
 ###############################################################################
