--- a/JEScorrection/Makefile
+++ b/JEScorrection/Makefile
@@ -59,18 +59,19 @@ $(BDIR)/%  : $(ODIR)/%.o
 ###############################################################################
 ############################# Main Targets ####################################
 ###############################################################################
-all : $(BDIR)/JEScorrection $(BDIR)/newJEScorrection $(BDIR)/noJEScorrection
+all : $(BDIR)/JEScorrection $(BDIR)/newJEScorrection $(BDIR)/noJEScorrection $(BDIR)/noJEScorrection_prelimTrackEffic
 
 $(ODIR)/funcs.o : $(SDIR)/funcs.cxx $(SDIR)/funcs.hh $(SDIR)/params.hh
 $(ODIR)/JEScorrection.o : $(SDIR)/JEScorrection.cxx $(SDIR)/params.hh
 $(ODIR)/newJEScorrection.o : $(SDIR)/newJEScorrection.cxx $(SDIR)/params.hh
 $(ODIR)/noJEScorrection.o : $(SDIR)/noJEScorrection.cxx $(SDIR)/params.hh
+$(ODIR)/noJEScorrection_prelimTrackEffic.o : $(SDIR)/noJEScorrection_prelimTrackEffic.cxx $(SDIR)/params.hh
 
 #data analysis
 $(BDIR)/JEScorrection :	$(ODIR)/JEScorrection.o	$(ODIR)/funcs.o
 $(BDIR)/newJEScorrection :	$(ODIR)/newJEScorrection.o	$(ODIR)/funcs.o
 $(BDIR)/noJEScorrection :	$(ODIR)/noJEScorrection.o	$(ODIR)/funcs.o
-
+$(BDIR)/noJEScorrection_prelimTrackEffic :	$(ODIR)/noJEScorrection_prelimTrackEffic.o	$(ODIR)/funcs.o
 
 ###############################################################################
 ##################################### MISC ####################################
